<resources>
    <string name="RFID_Error_AlreadyDone">RFID: The requested operation is already performed</string>
    <string name="RFID_Error_Busy">RFID: RFID is busy</string>
    <string name="RFID_Error_Failed">RFID: Failed</string>
    <string name="RFID_Error_FileIOError">RFID File: IO Error</string>
    <string name="RFID_Error_GraphManager">RFID: Creation or connection to Graph Manager COM server failed</string>
    <string name="RFID_Error_InvalidDirectory">RFID: Invalid directory</string>
    <string name="RFID_Error_InvalidParameter">RFID: Invalid parameter in ExecuteCommand() call found</string>
    <string name="RFID_Error_Layer34_CRC">RFID: Layer 34 - CRC</string>
    <string name="RFID_Error_Layer34_Collision">RFID: Layer 34 - Collision</string>
    <string name="RFID_Error_Layer34_Collision_TooMany">RFID: Layer 34 - Too many collision</string>
    <string name="RFID_Error_Layer34_DataContents">RFID: Layer 34 - Data contents</string>
    <string name="RFID_Error_Layer34_DataIntegrity">RFID: Layer 34 - Data integrity</string>
    <string name="RFID_Error_Layer34_DataLength">RFID: Layer 34 - Data length</string>
    <string name="RFID_Error_Layer34_GlobalTimeOut">RFID: Layer 34 - Globa timeout</string>
    <string name="RFID_Error_Layer34_MIFARE_Auth">RFID: Layer 34 - MIFARE auth</string>
    <string name="RFID_Error_Layer34_NoError">RFID: Layer 34 - No error</string>
    <string name="RFID_Error_Layer34_Protocol">RFID: Layer 34 - Protocol</string>
    <string name="RFID_Error_Layer34_ProtocolB">RFID: Layer 34 - Protocol B</string>
    <string name="RFID_Error_Layer34_RFU">RFID: Layer 34 - RFU</string>
    <string name="RFID_Error_Layer34_SAM_Acknowledge">RFID: Layer 34 - SAM acknowledge</string>
    <string name="RFID_Error_Layer34_SAM_Collision">RFID: Layer 34 - SAM collision</string>
    <string name="RFID_Error_Layer34_SAM_Error">RFID: Layer 34 - SAM error</string>
    <string name="RFID_Error_Layer34_TimeOut">RFID: Layer 34 - Timeout</string>
    <string name="RFID_Error_NoChipDetected">RFID: No chip is detected</string>
    <string name="RFID_Error_NoError">RFID: No error</string>
    <string name="RFID_Error_NotAvailable">RFID: Unavailable</string>
    <string name="RFID_Error_NotEnoughMemory">RFID: Out of memory</string>
    <string name="RFID_Error_NotInitialized">RFID: Device is uninitialized</string>
    <string name="RFID_Error_NotPerformed">RFID: Not performed</string>
    <string name="RFID_Error_OldFirmware">RFID: The firmware needs to be updated to a newer version</string>
    <string name="RFID_Error_PCSC_CantConnectCard">PCSC: The card cannot be connected</string>
    <string name="RFID_Error_PCSC_CardIsBusy">PCSC: The card is busy</string>
    <string name="RFID_Error_PCSC_CardIsNotConnected">PCSC: The card is not connected</string>
    <string name="RFID_Error_PCSC_ExtLe_Failed">PCSC: ExtLe Failed</string>
    <string name="RFID_Error_PCSC_Failed">PCSC: Failed</string>
    <string name="RFID_Error_PCSC_FailedSCard">PCSC: Failed Smart Card</string>
    <string name="RFID_Error_PCSC_OperationCancelled">PCSC: Operation is cancelled</string>
    <string name="RFID_Error_PCSC_ReaderNotAvailable">PCSC: The reader is unavailable</string>
    <string name="RFID_Error_Session_AccessControl_AA_Failed">RFID: AA failed</string>
    <string name="RFID_Error_Session_AccessControl_CA_Failed">RFID: CA failed</string>
    <string name="RFID_Error_Session_AccessControl_IncorrectOptionCA">RFID: Incorrect option CA</string>
    <string name="RFID_Error_Session_AccessControl_RI_Failed">RFID: RI failed</string>
    <string name="RFID_Error_Session_AccessControl_RequiresCA">RFID: CA required</string>
    <string name="RFID_Error_Session_AccessControl_RequiresCAKeys">RFID: CA keys required</string>
    <string name="RFID_Error_Session_AccessControl_RequiresPACE">RFID: PACE required</string>
    <string name="RFID_Error_Session_AccessControl_RequiresSM">RFID: SM required</string>
    <string name="RFID_Error_Session_AccessControl_RequiresTA">RFID: TA required</string>
    <string name="RFID_Error_Session_AccessControl_TA_Failed">RFID: TA failed</string>
    <string name="RFID_Error_Session_AccessControl_UnknownType">RFID: Access control unknown type</string>
    <string name="RFID_Error_Session_AccessKey_IncorrectData">RFID: Access key incorrect data</string>
    <string name="RFID_Error_Session_AccessKey_IncorrectSMType">RFID: Access key incorrect SM type</string>
    <string name="RFID_Error_Session_AccessKey_NotSet">RFID: Access key not set</string>
    <string name="RFID_Error_Session_AccessKey_Restricted">RFID: Access key restricted</string>
    <string name="RFID_Error_Session_AccessKey_UnknownType">RFID: Access key unknown type</string>
    <string name="RFID_Error_Session_AccessKey_UnsupportedSMType">RFID: Access key unsupported SM type</string>
    <string name="RFID_Error_Session_File_AccessDenied">RFID file: Access denied</string>
    <string name="RFID_Error_Session_File_CantReadData">RFID file: Cannot read data</string>
    <string name="RFID_Error_Session_File_CantUseData">RFID file: Cannot use data</string>
    <string name="RFID_Error_Session_File_Contents_UnexpectedData">RFID file: Contains unexpected data</string>
    <string name="RFID_Error_Session_File_IncorrectData">RFID file: Incorrect data</string>
    <string name="RFID_Error_Session_File_NotEnoughData">RFID file: Insufficient data</string>
    <string name="RFID_Error_Session_File_UnexpectedData">RFID file: Unexpected data</string>
    <string name="RFID_Error_Session_File_WrongTag">RFID file: Wrong tag</string>
    <string name="RFID_Error_Session_IncorrectData">RFID: Incorrect data</string>
    <string name="RFID_Error_Session_InvalidAuxData_CommunityID">RFID: Invalid aux data - community ID</string>
    <string name="RFID_Error_Session_InvalidAuxData_DateOfBirth">RFID: Invalid aux data - date of birth</string>
    <string name="RFID_Error_Session_InvalidAuxData_DateOfExpiry">RFID: Invalid aux data - date of expiry</string>
    <string name="RFID_Error_Session_IsClosed">RFID: Session is closed</string>
    <string name="RFID_Error_Session_PA_HashCheckFailed">RFID: Hash check failed</string>
    <string name="RFID_Error_Session_PA_SignatureCheckFailed">RFID: SO signature check failed</string>
    <string name="RFID_Error_Session_ProcedureType_NotSet">RFID: Procedure type not set</string>
    <string name="RFID_Error_Session_ProcedureType_Unknown">RFID: Unknown procedure type</string>
    <string name="RFID_Error_Session_ProcedureType_Unsupported">RFID: Unsupported procedure type</string>
    <string name="RFID_Error_Session_PwdManagement_NotAuthorized">RFID: PWD management not authorized</string>
    <string name="RFID_Error_Session_TerminalType_BadCertificate">RFID: Terminal type bad certificate</string>
    <string name="RFID_Error_Session_TerminalType_NotSet">RFID: Terminal type not set</string>
    <string name="RFID_Error_Session_TerminalType_Unknown">RFID: Terminal type unknown</string>
    <string name="RFID_Error_Session_Terminal_UnsupportedOperation">RFID: Unsupported terminal operation</string>
    <string name="RFID_Error_Session_eSign_PIN_NotSet">RFID: eSign PIN not set</string>
    <string name="RFID_Error_Session_eSign_PIN_NotVerified">RFID: eSign PIN not verified</string>
    <string name="accept_conditions_generales">J’accepte les conditions générales d’utilisation</string>
    <string name="accepter">Accepter</string>
    <string name="app_name">Cih Mobile</string>
    <string name="cancel">Annuler</string>
    <string name="cliquez_ici">Cliquez ici</string>
    <string name="code_confidentiel">Code confidentiel</string>
    <string name="condition_generales_description">Les termes et conditions suivants (« Conditions d’utilisation ») régissent l’utilisation des Cartes émises par le CREDIT IMMOBILIER ET HOTELIER (ci-après « la Banque » ou « CIH BANK » ou « nous ») avec le service « Application mobile CIH BANK » crée par la Banque activé sur les Appareils compatibles du Client.\n\nLes présentes conditions générales définissent les conditions et modalités d’utilisation du service « Application Mobile CIH BANK » que la Banque met à la disposition de toute personne, Titulaire d’un compte ouvert sur les livres de CIH BANK, (ci-après « le Client ou vous »), qui accepte.\n\nLes présentes Conditions d’utilisation constituent un accord juridique contraignant entre le Client et CIH BANK « la Banque » et s’appliquent au Client et/ou à toute autre personne autorisée par le Client à utiliser les Cartes avec l’Application Mobile CIH BANK.\n\nArticle 1 : Définitions\n\n Carte : désigne carte bancaire CIH BANK de crédit, de débit ou carte prépayée émise par CIH BANK au client, qui n’est pas échue, bloquée, suspendue ou annulée, et éligible au service Application mobile CIH BANK.\n\n· Client ou vous : désigne le titulaire de la carte bancaire CIH BANK ou le titulaire de compte de la carte émise par la Banque.\n\n· Appareil : comprend, sans s’y limiter, un smartphone, une tablette, une montre intelligente ou tout autre appareil, qui est compatible avec le service Application mobile CIH BANK, que CIH BANK détermine, est admissible à l’enregistrement des cartes bancaires CIH BANK devant être utilisées dans ledit service\n\n· Le Service Application Mobile CIH BANK : désigne le service de paiement mobile créé par la Banque qui permet aux utilisateurs d’effectuer des paiements à l’aide de certains appareils et cartes enregistrés sur ces appareils.\n\n· Mot de passe : signifie le code secret qui est nécessaire pour déverrouiller et valider le paiement, y compris un mot de passe, un code d’accès, un modèle ou un identificateur biométrique (le cas échéant).\n\nArticles 2 : Généralités\n\nVous êtes seul responsable du maintien de la sécurité physique de l’appareil et de la confidentialité de la serrure de l’appareil, du code d’accès et des autres moyens d’accéder au service Application Mobile CIH BANK aux justificatifs d’identité de la carte ou à tout autre renseignement personnel, de paiement sur ou pour l’appareil. Lors du partage de l’appareil et/ou des moyens d’accès à l’appareil avec toute personne, cette personne peut être en mesure d’utiliser les cartes et d’accéder aux renseignements personnels de paiement disponibles dans le service Application Mobile CIH BANK.\n\nVous êtes tenu de garder l’appareil et les justificatifs sécurisés de la même façon qu’il/elle garderait l’argent comptant, les chèques, les cartes de débit ou de crédit et d’autres numéros d’identification personnels et mots de passe sécurisés.\n\nLes conditions et la convention de compte qui régissent votre carte ne changent pas lorsque vous ajoutez votre carte au service Application mobile CIH BANK.\n\nCe Service vous offre simplement une autre façon de faire des achats avec la Carte.\n\nLes intérêts, les frais et les frais applicables à votre carte s’appliqueront également lorsque vous utiliserez le service « Application Mobile CIH BANK » pour accéder à votre carte.</string>
    <string name="conditions_generales">Conditions générales</string>
    <string name="modalit_s_et_conditions_d_activation_des_cartes_bancaires_sur_application_mobile_cih_bank">Modalités et conditions d’activation des cartes bancaires sur application mobile CIH BANK</string>
    <string name="otp_rules">* Code à usage unique valable 5 minutes.\n* Vous pouvez quitter l’application et revenir pour introduire le code.\n* Votre code vous sera communiqué sur votre GSM N° %1s\n* Si vous n’avez pas reçu votre code par SMS</string>
    <string name="strAuthenticatorAttached">The authenticator is attached to the phone</string>
    <string name="strAuthenticatorTurnedOn">The authenticator is turned on</string>
    <string name="strBluetoothEnabled">Bluetooth is enabled</string>
    <string name="strMakeSure">Please make sure that:</string>
    <string name="valider">Valider</string>
</resources>