<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.b3g.cih.cihpay.widgets.CustomTextView
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:custom_font="medium"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp">
            <com.b3g.cih.cihpay.widgets.CustomButton
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/gray2"
                android:id="@+id/btn_no"
                android:background="@drawable/btn_transparent_theme"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/cancel"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableEnd="@drawable/layer_no"/>
            <Space
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_15sdp"/>
            <com.b3g.cih.cihpay.widgets.CustomButton
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/app_color"
                android:id="@+id/btn_yes"
                android:background="@drawable/btn_transparent_theme"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/valider"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableEnd="@drawable/layer_yes"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
