<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/inc_toolbar"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_10sdp"/>
            <com.b3g.cih.cihpay.widgets.CustomTextView
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/app_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conditions_generales"
                app:custom_font="bold"/>
            <ScrollView
                android:background="@drawable/border_solid_white_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.b3g.cih.cihpay.widgets.CustomTextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="#033268"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingRight="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/modalit_s_et_conditions_d_activation_des_cartes_bancaires_sur_application_mobile_cih_bank"
                        app:custom_font="bold"/>
                    <com.b3g.cih.cihpay.widgets.CustomTextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="#93a8b3"
                        android:padding="@dimen/_10sdp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/condition_generales_description"
                        app:custom_font="regular"/>
                </LinearLayout>
            </ScrollView>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/lay_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.b3g.cih.cihpay.widgets.CustomCheckBox
                    android:textSize="@dimen/_10sdp"
                    android:textColor="#00adf2"
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_conditions_generales"
                    android:buttonTint="#00adf2"
                    app:custom_font="semibold"/>
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"/>
                <com.b3g.cih.cihpay.widgets.CustomButton
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:id="@+id/btn_accepter"
                    android:background="@drawable/border_enabled_button"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/accepter"
                    android:textAllCaps="false"
                    app:custom_font="semibold"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/inc_progress_bar"/>
</RelativeLayout>
