<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#fbfbfb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/skipHelpBtn"
        android:background="@android:color/transparent"
        android:padding="@dimen/reg_small_img_button_padding"
        android:visibility="visible"
        android:layout_width="@dimen/reg_img_button_size"
        android:layout_height="@dimen/reg_img_button_size"
        android:src="0x7f080244"
        android:scaleType="centerInside"
        android:tint="@android:color/black"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/skipHelpBtn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <Button
            android:theme="@style/PrimaryButton"
            android:id="@+id/enableBtBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enable bluetooth"/>
        <Button
            android:theme="@style/PrimaryButton"
            android:id="@+id/enableLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enable location"/>
        <Button
            android:theme="@style/PrimaryButton"
            android:id="@+id/permissionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Allow using bluetooth"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/instructionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_above="@+id/buttonsLayout">
        <TextView
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMakeSure"/>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <TextView
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:id="@+id/bleEnableTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strBluetoothEnabled"/>
            <TextView
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:id="@+id/torchOnPhoneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strAuthenticatorAttached"/>
            <TextView
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:id="@+id/torchOnTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strAuthenticatorTurnedOn"/>
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/torch"
        android:scaleType="centerCrop"
        android:layout_above="@+id/instructionLayout"/>
</RelativeLayout>
