<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/inc_toolbar"/>
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.b3g.cih.cihpay.widgets.CustomTextView
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/app_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirmation"
                app:custom_font="bold"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_weight="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.b3g.cih.cihpay.widgets.CustomTextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="#4a4a4a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Confirmez qu’il s’agit bien de vous en introduisant le code confidentiel reçu par SMS. Ne communiquer ce code à personne."
                        app:custom_font="medium"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"/>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp">
                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:src="@drawable/ic_password2"
                            android:adjustViewBounds="true"/>
                        <com.b3g.cih.cihpay.widgets.CustomEditText
                            android:textSize="@dimen/_14sdp"
                            android:textColor="@color/black"
                            android:textColorHint="#a2a2a2"
                            android:id="@+id/edt_otp"
                            android:background="@color/transparent"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text=""
                            android:hint="@string/code_confidentiel"
                            android:lines="1"
                            android:maxLength="6"
                            android:inputType="number"
                            app:custom_font="medium"/>
                    </LinearLayout>
                    <View
                        android:background="#a2a2a2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_margin="@dimen/_5sdp"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_20sdp"/>
                    <com.b3g.cih.cihpay.widgets.CustomButton
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:background="@drawable/btn_app_theme"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:text="@string/valider"
                        android:onClick="onBtnValiderClicked"
                        android:textAllCaps="false"
                        app:custom_font="medium"/>
                    <com.b3g.cih.cihpay.widgets.CustomTextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="#4a4a4a"
                        android:id="@+id/txt_otp_rules"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_rules"
                        app:custom_font="regular"/>
                    <com.b3g.cih.cihpay.widgets.CustomButton
                        android:textColor="#05aeef"
                        android:background="@drawable/btn_transparent_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:text="@string/cliquez_ici"
                        android:onClick="onCliquezIciButtonClicked"
                        android:textAllCaps="false"
                        app:custom_font="semibold"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/inc_progress_bar"/>
</RelativeLayout>
